--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="SmsMonitor">
+        <receiver android:name=".SmsMonitor">
             <intent-filter android:priority="10">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
