--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':lib')
+    compile "com.android.support:support-v4:18.0.+"
 }
