--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,30 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion '20.0.0'
+    compileSdkVersion 19
+    buildToolsVersion '21.1.1'
     defaultConfig {
         applicationId 'org.company.cardstat'
         minSdkVersion 17
-        targetSdkVersion 17
+        targetSdkVersion 19
         versionCode 1
         versionName '1.0'
     }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    productFlavors {
-    }
+
     sourceSets {
         instrumentTest.setRoot("src/androidTest")
+    }
+
+    packagingOptions  {
+        exclude "META-INF/LICENSE.txt"
     }
 }
 
 dependencies {
-    compile 'junit:junit:4.11'
-    compile 'com.android.support:support-v4:18.0.+'
+    compile ('junit:junit:4.11') {
+        exclude group: 'org.hamcrest'
+    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
+
 
